# Web-agent

./: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
src/web_agent/api/: app.py
src/web_agent/llm/: generate.py
src/web_agent/rag/: loader.py  pipeline.py
src/web_agent/storage/: __init__.py  r2_loader.py
tests/: conftest.py  test_basic.py  test_dump_loader.py  test_pipeline_qa_dump.py  test_snowball_agent.py
