[tool.poetry]
name = "web-agent"
version = "0.1.0"
description = ""
authors = ["Paul G <paulgarghe23@gmail.com>"]
readme = "README.md"
packages = [{ include = "web_agent", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
pydantic-settings = "^2.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
